<resources>
    <string name="app_name">Candy Store Ramirez</string>
    <string name="action_settings">Settings</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="label_name">Name</string>
    <string name="label_price">Price</string>
    <string name="button_add">ADD</string>
    <string name="button_back">BACK</string>
    <string name="title_activity_insert">Add New Candy</string>
    <string name="candy_price_edit_text_hint">Candy Price</string>
    <string name="candy_name_edit_text_hint">Candy Name</string>
    <string name="title_activity_delete">Delete a Candy</string>
    <string name="title_activity_update">Update a Candy</string>


</resources>
